Translation of the buttons to english language.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <body>
         <nav>
             <ul>
-                <li><button class="luku">Nosta lukua 0</button></li>
-                <li><button class="muoto">Muuta muotoa</button></li>
+                <li><button class="luku">Increace element count 0</button></li>
+                <li><button class="muoto">Change form of element</button></li>
             </ul>
         </nav>
         <script src="js/main.js"></script>
